[gd_scene load_steps=28 format=3 uid="uid://dh0nciotk3wfb"]

[ext_resource type="Script" uid="uid://phmyu3uv4cgg" path="res://Scripts/Player/player.gd" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://crxq57eitv3ge" path="res://Assets/Sprites/Characters/Placeholders/batFlappingLearningPixel16x16.png" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://rmb87n48c1f0" path="res://Scripts/HealthSystem/health.gd" id="2_tx1dd"]
[ext_resource type="Script" uid="uid://d4a26yarihxtv" path="res://Scripts/StateMachine/state_machine.gd" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://buvlgko6t4lmk" path="res://Scripts/StateMachine/states/idle.gd" id="4_vgqql"]
[ext_resource type="Script" uid="uid://hc0my844aetm" path="res://Scripts/StateMachine/states/jump.gd" id="5_fkybt"]
[ext_resource type="Script" uid="uid://d3d652csc6xbx" path="res://Scripts/StateMachine/states/fall.gd" id="6_x3wgy"]
[ext_resource type="Script" uid="uid://co72o1wx05awn" path="res://Scripts/StateMachine/states/move.gd" id="7_3smsa"]
[ext_resource type="Script" uid="uid://c1citqb5hx8y3" path="res://Scripts/Player/player_movement_component.gd" id="8_8erm5"]
[ext_resource type="Script" uid="uid://dle1tft7k67rn" path="res://Scripts/HealthSystem/hitbox.gd" id="9_f1ek2"]
[ext_resource type="Script" uid="uid://cye0ywfwe3wo0" path="res://Scripts/HealthSystem/hurtbox.gd" id="11_gymyn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f60y1"]
radius = 3.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_cvnsp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_cvnsp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_cvnsp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_cvnsp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_cvnsp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("2_cvnsp")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("2_cvnsp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("2_cvnsp")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("2_cvnsp")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("2_cvnsp")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("2_cvnsp")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("2_cvnsp")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("2_cvnsp")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0iea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}],
"loop": true,
"name": &"Move",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tx1dd"]
size = Vector2(52, 7)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 7
script = ExtResource("1_v0iea")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_tx1dd")
metadata/_custom_type_script = "uid://rmb87n48c1f0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_f60y1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v0iea")
animation = &"Move"
autoplay = "Idle"

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_6t5aa")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state")]
script = ExtResource("4_vgqql")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
animation_name = "Idle"

[node name="jump" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state")]
script = ExtResource("5_fkybt")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")

[node name="fall" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("6_x3wgy")
idle_state = NodePath("../idle")
move_state = NodePath("../move")

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state")]
script = ExtResource("7_3smsa")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
animation_name = "Move"

[node name="move_component" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("8_8erm5")
parent = NodePath("..")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("9_f1ek2")
damage = 2
metadata/_custom_type_script = "uid://dle1tft7k67rn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(33, 0)
shape = SubResource("RectangleShape2D_tx1dd")
disabled = true

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("11_gymyn")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://cye0ywfwe3wo0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_f60y1")
